fix button alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,9 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+button.mat-button { color: red;}
+
+.mdc-theme--primary-bg {
+  background-color: blue
+}
